--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-30-04: Stability fix regarding PVP with skill weapon. [AlexKreuz]
- 06-30-04: Stability fix regarding JCon Delete. [AlexKreuz]
- 06-30-04: Uncapped Fire Wall for now until I can fix a problem. [Trihan]
- 06-30-04: Capped Fire Wall so only 3 can be active at a time. [Trihan]
- 06-30-04: Added Athena @charwarp command to ALBGM. [Trihan]
- 06-30-04: Added Athena @warp command to ALBGM. [Trihan]
- 06-30-04: Added Athena @rura command to ALBGM. [Trihan]
- 06-30-04: Added Athena @where command to ALBGM. [Trihan]
- 06-30-04: Added Athena @jumpto command to ALBGM. [Trihan]
- 06-30-04: Added Athena @jump command to ALBGM. [Trihan]
- 06-30-04: Added Athena @who command to ALBGM. [Trihan]
- 06-30-04: Added Athena @who2 command to ALBGM. [Trihan]
- 06-30-04: Added Athena @who3 command to ALBGM. [Trihan]
- 06-30-04: Fixed the bug where Aegis and Athena access levels weren't being saved. [Trihan]
- 06-30-04: Added Athena @speed command to ALBGM. [Trihan]
- 06-30-04: Added Athena @storage command to ALBGM. [Trihan]
- 06-30-04: Added Athena @option command to ALBGM. [Trihan]
- 06-29-04: Added Athena @hide command to ALBGM. [Trihan]
- 06-29-04: Added Athena @jobchange command to ALBGM. [Trihan]
- 06-29-04: Fixed JCon Account Delete to also delete Characters, Parties, Guilds. [AlexKreuz]
- 06-29-04: Added Athena @kill command to ALBGM. [Trihan]
- 06-29-04: Minor stability fixes to JCon. [AlexKreuz]
- 06-29-04: Banned and Gender in JCon Accounts not drop down menus. [AlexKreuz]
- 06-29-04: New unique ID assigning method for accounts. [AlexKreuz]
- 06-29-04: Added account delete button to JCon. [AlexKreuz]
- 06-29-04: Added Athena @alive command to ALBGM. [Trihan]
- 06-29-04: Added Athena @heal command to ALBGM. [Trihan]