@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-30-04: Fatal Error on Die XP Loss caused database corruption. [AlexKreuz]
 - 06-30-04: Stability fix regarding PVP with skill weapon. [AlexKreuz]
 - 06-30-04: Stability fix regarding JCon Delete. [AlexKreuz]
 - 06-30-04: Uncapped Fire Wall for now until I can fix a problem. [Trihan]
